welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: method interval has return statement; needs result type
  if ((a>=13)&&(a<=19)) {return true} else {return false}
                         ^loneTeen:6: error: method interval has return statement; needs result type
  if ((a>=13)&&(a<=19)) {return true} else {return false}
                                            ^