welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if (a == b) {return false} else {return true}
}
  
def interval(a:Int) = {
  if ((a>=13)&&(a<=19)) {return true} else {return false}
}